--- a/angular.json
+++ b/angular.json
@@ -1,81 +1,77 @@
 ﻿{
-    "$schema":  "./node_modules/@angular/cli/lib/config/schema.json",
-    "version":  1,
-    "cli":  {
-                "packageManager": "npm",
-                "analytics": false
+  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "version": 1,
+  "cli": {
+    "packageManager": "npm",
+    "analytics": false
+  },
+  "newProjectRoot": "projects",
+  "projects": {
+    "pdf-merger": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "",
+      "sourceRoot": "src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:application",
+          "options": {
+            "browser": "src/main.ts",
+            "tsConfig": "tsconfig.app.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "public"
+              },
+              {
+                "glob": "pdf.worker.min.mjs",
+                "input": "node_modules/pdfjs-dist/build",
+                "output": "assets"
+              }
+            ],
+            "styles": ["src/styles.css"]
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all"
             },
-    "newProjectRoot":  "projects",
-    "projects":  {
-                     "pdf-merger":  {
-                                        "projectType":  "application",
-                                        "schematics":  {
-
-                                                       },
-                                        "root":  "",
-                                        "sourceRoot":  "src",
-                                        "prefix":  "app",
-                                        "architect":  {
-                                                          "build":  {
-                                                                        "builder":  "@angular/build:application",
-                                                                        "options":  {
-                                                                                        "browser":  "src/main.ts",
-                                                                                        "tsConfig":  "tsconfig.app.json",
-                                                                                        "assets":  [
-                                                                                                       {
-                                                                                                           "glob":  "**/*",
-                                                                                                           "input":  "public"
-                                                                                                       },
-                                                                                                       {
-                                                                                                           "glob":  "pdf.worker.min.mjs",
-                                                                                                           "input":  "node_modules/pdfjs-dist/build",
-                                                                                                           "output":  "assets"
-                                                                                                       }
-                                                                                                   ],
-                                                                                        "styles":  [
-                                                                                                       "src/styles.css"
-                                                                                                   ]
-                                                                                    },
-                                                                        "configurations":  {
-                                                                                               "production":  {
-                                                                                                                  "budgets":  [
-                                                                                                                                  {
-                                                                                                                                      "type":  "initial",
-                                                                                                                                      "maximumWarning":  "500kB",
-                                                                                                                                      "maximumError":  "1MB"
-                                                                                                                                  },
-                                                                                                                                  {
-                                                                                                                                      "type":  "anyComponentStyle",
-                                                                                                                                      "maximumWarning":  "4kB",
-                                                                                                                                      "maximumError":  "8kB"
-                                                                                                                                  }
-                                                                                                                              ],
-                                                                                                                  "outputHashing":  "all"
-                                                                                                              },
-                                                                                               "development":  {
-                                                                                                                   "optimization":  false,
-                                                                                                                   "extractLicenses":  false,
-                                                                                                                   "sourceMap":  true
-                                                                                                               }
-                                                                                           },
-                                                                        "defaultConfiguration":  "production"
-                                                                    },
-                                                          "serve":  {
-                                                                        "builder":  "@angular/build:dev-server",
-                                                                        "configurations":  {
-                                                                                               "production":  {
-                                                                                                                  "buildTarget":  "pdf-merger:build:production"
-                                                                                                              },
-                                                                                               "development":  {
-                                                                                                                   "buildTarget":  "pdf-merger:build:development"
-                                                                                                               }
-                                                                                           },
-                                                                        "defaultConfiguration":  "development"
-                                                                    },
-                                                          "test":  {
-                                                                       "builder":  "@angular/build:unit-test"
-                                                                   }
-                                                      }
-                                    }
-                 }
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular/build:dev-server",
+          "configurations": {
+            "production": {
+              "buildTarget": "pdf-merger:build:production"
+            },
+            "development": {
+              "buildTarget": "pdf-merger:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "test": {
+          "builder": "@angular/build:unit-test"
+        }
+      }
+    }
+  }
 }
